--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "5": "0.0.1",
+    "bcrypt": "^5.0.0",
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "sequelize": "^4.8.0",
